--- a/styles.css
+++ b/styles.css
@@ -598,7 +598,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  width: 60%;
+  width: 80%;
   height: 80%;
   display: flex;
   justify-content: center;
@@ -887,11 +887,10 @@
   background-size: 200%;
   background-repeat: no-repeat;
   background-position: center;
-  z-index: -1;
 }
 .section_10 > canvas{
   opacity: 0;
-  z-index: 1;
+  z-index: 2;
 }
 .section_10 > img{
   opacity: 0;
@@ -941,62 +940,43 @@
   margin-bottom: 40px;
   cursor: pointer;
 }
-@keyframes scaletext_section10 {
-  0% {
-    opacity: 0;
-    transform:  scale(0.4);
-  }
-  100% {
-    opacity: 1;
-    transform:  scale(1);
-  }
-}
-@keyframes see_btn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-.section_10 > section > h3{
-  opacity: 0;
-}
-.section_10 > section > p{
-  opacity: 0;
-}
-.section_10--title{
-  width: fit-content;
-  height: fit-content;
-  margin-top: auto;
-  font-family: "Great Vibes", cursive;
-  font-weight: 400;
-  font-style: normal;
-  opacity: 0;
-  color: #9b5a01;
-  margin-inline: auto;
-  font-size: 30px;
-  text-decoration: underline;
-  animation-name: scaletext_section10;
-  animation-duration: 2s; 
+.section_10-outer_circle{
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.4);
+  animation-name: scaleOuterCircle;
+  animation-duration: 1.5s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
+  border: 2px solid transparent;
+  border-radius: 50%;
+  background-image: linear-gradient(white,white)
+  ,linear-gradient(90deg,#9b5a01, #cbac44  );
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  z-index: 1;
 }
-.section_10--description{
-  font-size: 28px;
-  place-items: center;
-  color: #9b5a01;
-  font-family: "Cormorant Infant", serif;
-  font-weight: 600;
-  font-style: normal;
-  width: 100%;
-  height: fit-content;
-  margin: auto;
-  text-align: center;
-  animation-name: scaletext_section10;
-  animation-duration: 2s; 
+.section_10-inner_circle{
+  position: absolute;
+  width: 280px;
+  height: 280px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%)scale(0.4);
+  animation-name: scaleInnerCircle;
+  animation-duration: 2.4s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  background-image: linear-gradient(white,white)
+  ,linear-gradient(90deg,#9b5a01, #cbac44  );
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  z-index: 1;
 }
 
 .section_11{
@@ -1028,6 +1008,9 @@
   animation-fill-mode: forwards;
 }
 .section_11 > button{
+ opacity: 0;
+}
+.section_11--btn_check{
   position: absolute;
   filter: drop-shadow(6px 6px 8px #565657);
   bottom: 5%;
@@ -1043,6 +1026,10 @@
   left: 50%;
   transform: translate(-50%, -50%) ;
   z-index: 6;
+  animation-name: fadeInText;
+  animation-duration: 2.5s; 
+  animation-timing-function: linear; 
+  animation-fill-mode: forwards;
 }
 .section_12{
   background: url('fondo-abajo.svg');
@@ -1188,8 +1175,9 @@
 
 
 .carousel {
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 6px);
+  height: calc(100% - 6px);
+  border: 2px solid #9b5a01;
   position: relative;
 }
 
