--- a/styles.css
+++ b/styles.css
@@ -325,10 +325,10 @@
   position:absolute;
   opacity: 0;
   width: 80%;
-  height: 50px;
-  bottom: 30%;
+  height:100%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(10);
+  transform: translate(-50%, -50%);
   z-index: 5;
   animation-name: fadeInText;
   animation-duration: 2.5s; 
@@ -480,7 +480,7 @@
   height: 280px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%)scale(0.4);
+  transform: translate(-50%, -50%) scale(0.4);
   animation-name: scaleInnerCircle;
   animation-duration: 2.4s; 
   animation-timing-function: linear; 
