--- a/styles.css
+++ b/styles.css
@@ -1311,3 +1311,80 @@
 .carousel-button.next {
   right: 1rem;
 }
+.box_flower_1{
+  position: absolute;
+  width: 25%;
+  height: 25%;
+  outline: 2px solid black;
+  left: 50%;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 4;
+}
+.box_flower_1 > div{
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+@keyframes rotate_big_green {
+  0% {
+    transform:translate(-50%, -50%) rotateZ(90deg);
+  }
+  25% {
+    transform:translate(-50%, -50%) rotateZ(85deg);
+  }
+  50% {
+    transform:translate(-50%, -50%) rotateZ(90deg);
+  }
+  75% {
+    transform:translate(-50%, -50%) rotateZ(95deg);
+  }
+  100%{
+    transform:translate(-50%, -50%) rotateZ(90deg);
+  }
+}
+@keyframes rotate_white_left {
+  0% {
+    transform:translate(-50%, -50%) rotateZ(0deg);
+  }
+  25% {
+    transform:translate(-50%, -50%) rotateZ(-5deg);
+  }
+  50% {
+    transform:translate(-50%, -50%) rotateZ(0deg);
+  }
+  75% {
+    transform:translate(-50%, -50%) rotateZ(5deg);
+  }
+  100%{
+    transform:translate(-50%, -50%) rotateZ(0deg);
+  }
+}
+.container_flower_r > img:nth-child(1){
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: calc(50% + 20px);
+  left: calc(50% - 35px);
+  transform: translate(-50%, -50%) rotateZ(0deg); 
+  animation: rotate_white_left 3s infinite linear;
+}
+.container_flower_r > img:nth-child(2){
+  width: 70px;
+  height: 70px;
+  position: absolute;
+  top: calc(50% + 20px);
+  left: calc(50% + 5px);
+  transform: translate(-50%, -50%) rotateZ(90deg); 
+  animation: rotate_big_green 3s infinite linear;
+}
+.container_flower_r > img:last-child{
+  width: 90px;
+  height: 90px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotateZ(170deg); 
+}
