--- a/styles.css
+++ b/styles.css
@@ -1315,9 +1315,21 @@
   position: absolute;
   width: 25%;
   height: 25%;
-  outline: 2px solid black;
-  left: 40%;
+  left: 10px;
   top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 4;
+  overflow: visible;
+}
+.box_flower_2{
+  position: absolute;
+  width: 25%;
+  height: 25%;
+  right: 10px;
+  bottom: 0;
+  transform: rotateZ(180deg);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1381,6 +1393,108 @@
     transform:translate(-50%, -50%) rotateZ(0deg);
   }
 }
+@keyframes rotate_white_rigth {
+  0% {
+    transform:translate(-50%, -50%) rotateZ(200deg);
+  }
+  25% {
+    transform:translate(-50%, -50%) rotateZ(195deg);
+  }
+  50% {
+    transform:translate(-50%, -50%) rotateZ(200deg);
+  }
+  75% {
+    transform:translate(-50%, -50%) rotateZ(205deg);
+  }
+  100%{
+    transform:translate(-50%, -50%) rotateZ(200deg);
+  }
+}
+@keyframes rotate_medium_rigth {
+  0% {
+    transform:translate(-50%, -50%) rotateZ(20deg);
+  }
+  25% {
+    transform:translate(-50%, -50%) rotateZ(15deg);
+  }
+  50% {
+    transform:translate(-50%, -50%) rotateZ(20deg);
+  }
+  75% {
+    transform:translate(-50%, -50%) rotateZ(25deg);
+  }
+  100%{
+    transform:translate(-50%, -50%) rotateZ(20deg);
+  }
+}
+@keyframes rotate_medium_left {
+  0% {
+    transform:translate(-50%, -50%) rotateZ(150deg);
+  }
+  25% {
+    transform:translate(-50%, -50%) rotateZ(145deg);
+  }
+  50% {
+    transform:translate(-50%, -50%) rotateZ(150deg);
+  }
+  75% {
+    transform:translate(-50%, -50%) rotateZ(155deg);
+  }
+  100%{
+    transform:translate(-50%, -50%) rotateZ(150deg);
+  }
+}
+@keyframes rotate_tiny {
+  0% {
+    transform:translate(-50%, -50%) rotateZ(250deg);
+  }
+  25% {
+    transform:translate(-50%, -50%) rotateZ(245deg);
+  }
+  50% {
+    transform:translate(-50%, -50%) rotateZ(250deg);
+  }
+  75% {
+    transform:translate(-50%, -50%) rotateZ(255deg);
+  }
+  100%{
+    transform:translate(-50%, -50%) rotateZ(250deg);
+  }
+}
+@keyframes rotate_little {
+  0% {
+    transform:translate(-50%, -50%) rotateZ(280deg);
+  }
+  25% {
+    transform:translate(-50%, -50%) rotateZ(275deg);
+  }
+  50% {
+    transform:translate(-50%, -50%) rotateZ(280deg);
+  }
+  75% {
+    transform:translate(-50%, -50%) rotateZ(285deg);
+  }
+  100%{
+    transform:translate(-50%, -50%) rotateZ(280deg);
+  }
+}
+@keyframes rotate_red_points {
+  0% {
+    transform:translate(-50%, -50%) rotateZ(240deg);
+  }
+  25% {
+    transform:translate(-50%, -50%) rotateZ(235deg);
+  }
+  50% {
+    transform:translate(-50%, -50%) rotateZ(240deg);
+  }
+  75% {
+    transform:translate(-50%, -50%) rotateZ(245deg);
+  }
+  100%{
+    transform:translate(-50%, -50%) rotateZ(240deg);
+  }
+}
 .container_flower_r > img:nth-child(1){
   width: 90px;
   height: 90px;
@@ -1388,6 +1502,7 @@
   top: calc(50% - 30px);
   left: calc(50% + 65px);
   transform: translate(-50%, -50%) rotateZ(20deg); 
+  animation: rotate_medium_rigth 3s infinite linear;
 }
 .container_flower_r > img:nth-child(2){
   width: 90px;
@@ -1396,6 +1511,7 @@
   top: calc(50% + 70px);
   left: calc(50% - 15px);
   transform: translate(-50%, -50%) rotateZ(150deg); 
+  animation: rotate_medium_left 3s infinite linear;
 }
 .container_flower_r > img:nth-child(3){
   width: 70px;
@@ -1404,6 +1520,7 @@
   top: calc(50% );
   left: calc(50% + 65px);
   transform: translate(-50%, -50%) rotateZ(250deg); 
+  animation: rotate_tiny 3s infinite linear;
 }
 .container_flower_r > img:nth-child(4){
   width: 50px;
@@ -1421,6 +1538,7 @@
   top: calc(50% - 30px);
   left: calc(50% + 30px);
   transform: translate(-50%, -50%) rotateZ(200deg); 
+  animation: rotate_white_rigth 3s infinite linear;
 }
 .container_flower_r > img:nth-child(6){
   width: 80px;
@@ -1429,10 +1547,11 @@
   top: calc(50% + 40px);
   left: calc(50% + 15px);
   transform: translate(-50%, -50%) rotateZ(280deg); 
+  animation: rotate_little 3s infinite linear;
 }
 .container_flower_r > img:nth-child(7){
-  width: 70px;
-  height: 70px;
+  width: 75px;
+  height: 75px;
   position: absolute;
   top: calc(50% + 20px);
   left: calc(50% + 5px);
@@ -1440,8 +1559,8 @@
   animation: rotate_big_green 3s infinite linear;
 }
 .container_flower_r > img:nth-child(8){
-  width: 70px;
-  height: 70px;
+  width: 75px;
+  height: 75px;
   position: absolute;
   top: calc(50% - 30px);
   left: calc(50% - 5px);
@@ -1455,10 +1574,11 @@
   top: calc(50% + 30px);
   left: calc(50% + 55px);
   transform: translate(-50%, -50%) rotateZ(240deg); 
+  animation: rotate_red_points 3s infinite linear;
 }
 .container_flower_r > img:last-child{
-  width: 90px;
-  height: 90px;
+  width: 95px;
+  height: 95px;
   position: absolute;
   top: 50%;
   left: 50%;
